<resources>

    <string-array name="Select_fillingtype">
        <item>Amount</item>
        <item>Litre/Kg</item>
        <item>Full Tank</item>

    </string-array>

    <string-array name="planType_array">
        <item>CCM</item>
        <item>E-CCM</item>

    </string-array>

    <string name="app_name">FW-Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--for validations-->
    <string name="S_SET">abcdefghijklmnopqrstuvwxyz</string>
    <string name="C_SET">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="I_SET">0123456789</string>
    <string name="D_SET">0123456789.</string>

    <string name="SC_SET">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="SCWS_SET">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="SCI_SET">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="SCIWS_SET">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="CI_SET">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="ADDRESS_SET">abcdefghijklmnopqrstuvwxyz ,-:._@ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>


    <string name="close_batch_confirm">Please close your batch before logout</string>
    <string name="search_tranzaction_page_hint">Enter IndentNo, Vehicle/Machine</string>
    <string name="back"><![CDATA[<< BACK]]></string>

    <string name="otp_message_text"><![CDATA[Sit back & Relax! while we verify your mobile number]]></string>

</resources>
